# travelling-merchant

./: .gitignore  README.md  benchmark.py  cristo.py  cristo_by_step.py  cristofides.py  genetique.py  main.py  pyproject.toml  utils.py  visualize.py
results/: benchmark_results.csv
