[project]
name = "travelling-merchant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "basemap>=2.0.0",
    "matplotlib>=3.10.7",
    "networkx>=3.5",
    "pandas>=2.3.3",
    "psutil>=5.9.0",
    "seaborn>=0.13.2",
]
